--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,6 @@ datasources:
     driverClassName: org.h2.Driver
     username: sa
     password: ''
-    schema-generate: CREATE_DROP
+    schema-generate: UPDATE
     dialect: H2
 jpa.default.properties.hibernate.hbm2ddl.auto: update
